[package]
name = "geo_dtrees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tangram = {git = "https://github.com/MarWeUMR/modelfox", branch = "tangram"}
tangram_table = {git = "https://github.com/MarWeUMR/modelfox", branch = "tangram"}
tangram_tree = {git = "https://github.com/MarWeUMR/modelfox", branch = "tangram"}
tangram_kill_chip = {git = "https://github.com/MarWeUMR/modelfox", branch = "tangram"}
tangram_zip = {git = "https://github.com/MarWeUMR/modelfox", branch = "tangram"}
tangram_metrics = {git = "https://github.com/MarWeUMR/modelfox", branch = "tangram"}
xgboost-bindings = {git = "https://github.com/MarWeUMR/xgboost-bindings", branch = "exp"}
polars = {version="*", features=["ndarray", "strings", "rows", "fmt", "to_dummies"]}
# pyo3= {version="*", features=["auto-initialize"]}
ndarray = "*"
num-traits = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1"
eval-metrics = "*"

