[package]
name = "geo_dtrees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xgboost-bindings = {git = "https://github.com/MarWeUMR/xgboost-bindings"}
polars = {version="*", features=["ndarray", "strings", "rows", "fmt", "to_dummies"]}
ndarray = "0.14"
num-traits = "*"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1"
eval-metrics = "*"

